Contact line now is right bellow the main information small bug fix to error page and connection errors

--- a/static/Pages/Gallery/style.css
+++ b/static/Pages/Gallery/style.css
@@ -27,7 +27,7 @@
 }
 
 .scroll {
-    max-width: 100%;
+    max-width: 90%;
     margin-left: auto;
     overflow-x: clip;
     overflow-y: clip;
